added comments to parallel main, changed val from uint32_t to uint64_t

--- a/CPU_PARALLEL/Makefile
+++ b/CPU_PARALLEL/Makefile
@@ -1,5 +1,5 @@
 CC=g++
-CFLAGS=-g -fopenmp -std=c++17 -Wall -O2
+CFLAGS=-fopenmp -std=c++17 -Wall -O2
 SOURCES=src/SHA256.cpp src/main.cpp
 EXE=hashing
 INC=include/
@@ -7,7 +7,7 @@ INC=include/
 all: targ
 
 targ: $(SOURCES)
-  $(CC) $(CFLAGS) $(SOURCES) -I $(INC) -o $(EXE)
+	$(CC) $(CFLAGS) $(SOURCES) -I $(INC) -o $(EXE)
 
 clean:
-  rm $(EXE)
+	rm $(EXE)
