Open acc compiling

--- a/GPU_Implementation/Makefile
+++ b/GPU_Implementation/Makefile
@@ -1,5 +1,5 @@
 CC=nvc++
-CFLAGS= -Minfo=acc #-fopenmp -std=c++17 -Wall -O2
+CFLAGS= -Minfo=acc -acc #-fopenmp -std=c++17 -Wall -O2
 SOURCES=src/SHA256.cpp src/main.cpp
 EXE=hashing
 INC=include/
