Reverts to OpenACC

--- a/GPU_Implementation/Makefile
+++ b/GPU_Implementation/Makefile
@@ -1,5 +1,5 @@
-CC=nvc++
-CFLAGS= -Minfo=acc -acc #-fopenmp -std=c++17 -Wall -O2
+CC=g++
+CFLAGS= -fopenacc -std=c++17 -Wall -O2 #-Minfo=acc -acc #
 SOURCES=src/SHA256.cpp src/main.cpp
 EXE=hashing
 INC=include/
@@ -10,4 +10,4 @@ targ: $(SOURCES)
 	$(CC) $(CFLAGS) $(SOURCES) -I $(INC) -o $(EXE)
 
 clean:
-	rm $(EXE)
+	m $(EXE)
